update id to long